fix(Packet) Change packet average weight calculation